--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@
 
 # Used by RuboCop. Remote config files pulled in from inherit_from directive.
 .rubocop-https?--*
+
+# Include project IDE settings, but ignore user-specific settings.
+!.idea/
+*.iml
+*.iws
+out/
