--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -5,6 +5,9 @@ on:
     branches-ignore:
       - main
 
+env:
+  REGISTRY: docker.io
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -31,3 +34,33 @@ jobs:
           bundler-cache: true
       - name: Run tests
         run: bundle exec rspec
+
+  docker:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+#        with:
+#          images: name/app
+      - name: Build the image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: false
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+      - name: Scan the image
+        uses: docker/scout-action@v1
+        with:
+          command: cves
+#          only-fixed: true
+          only-severities: critical,high
+          write-comment: true
