--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,11 @@
 services:
   api:
     build: .
+    environment:
+      ONEDRIVE_CLIENT_ID: ${ONEDRIVE_CLIENT_ID}
+      ONEDRIVE_CLIENT_SECRET: ${ONEDRIVE_CLIENT_SECRET}
+      ONEDRIVE_DRIVE_ID: ${ONEDRIVE_DRIVE_ID}
+      ONEDRIVE_TENANT_ID: ${ONEDRIVE_TENANT_ID}
     volumes:
       - .:/opt/app
     ports:
