CCAP-142 Add an API key authentication mechanism to the microservice

--- a/.github/config/rubocop_linter_action.yml
+++ b/.github/config/rubocop_linter_action.yml
@@ -13,9 +13,10 @@ check_name: 'RuboCop Results'
 #     - rubocop: 'latest'
 versions:
   - rubocop: 'latest'
+  - rubocop-factory_bot: 'latest'
   - rubocop-rake: 'latest'
   - rubocop-rspec: 'latest'
-  - rubocop-factory_bot: 'latest'
+  - rubocop-sequel: 'latest'
 
 # Description: RuboCop configuration file path relative to the workspace.
 # Valid options: A valid file path inside of the workspace.
