Added postgres to docker compose.

--- a/sample.env
+++ b/sample.env
@@ -1,5 +1,8 @@
-export RACK_ENV=development
 export COVERAGE=1
+export RACK_ENV=development
+
+# Update to match your local database configuration, if necessary.
+export DATABASE_URL="postgresql://localhost:5432/document_transfer"
 
 # Uncomment and set to the name of your AWS profile to use the aws cli.
 #export AWS_PROFILE=
