--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,15 @@
 services:
   api:
     build: .
+    depends_on:
+      db:
+        condition: service_healthy
     environment:
       ONEDRIVE_CLIENT_ID: ${ONEDRIVE_CLIENT_ID}
       ONEDRIVE_CLIENT_SECRET: ${ONEDRIVE_CLIENT_SECRET}
       ONEDRIVE_DRIVE_ID: ${ONEDRIVE_DRIVE_ID}
       ONEDRIVE_TENANT_ID: ${ONEDRIVE_TENANT_ID}
+      DATABASE_URL: postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@db/${POSTGRES_DB:-document_transfer}
     volumes:
       - .:/opt/app
     ports:
