Updated database documentation.

--- a/sample.env
+++ b/sample.env
@@ -2,7 +2,11 @@ export COVERAGE=1
 export RACK_ENV=development
 
 # Update to match your local database configuration, if necessary.
-export DATABASE_URL="postgresql://localhost:5432/document_transfer"
+export DATABASE_USER=""
+export DATABASE_PASSWORD=""
+export DATABASE_HOST="localhost"
+export DATABASE_PORT="5432"
+export DATABASE_NAME="document_transfer"
 
 # Uncomment and set to the name of your AWS profile to use the aws cli.
 #export AWS_PROFILE=
