--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,12 +4,16 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    restart: always
     environment:
       ONEDRIVE_CLIENT_ID: ${ONEDRIVE_CLIENT_ID}
       ONEDRIVE_CLIENT_SECRET: ${ONEDRIVE_CLIENT_SECRET}
       ONEDRIVE_DRIVE_ID: ${ONEDRIVE_DRIVE_ID}
       ONEDRIVE_TENANT_ID: ${ONEDRIVE_TENANT_ID}
-      DATABASE_URL: postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@db/${POSTGRES_DB:-document_transfer}
+      DATABASE_USER: ${DATABASE_USER:-postgres}
+      DATABASE_PASSWORD: ${DATABASE_PASSWORD:-postgres}
+      DATABASE_HOST: db
+      DATABASE_NAME: ${POSTGRES_DB:-document_transfer}
     volumes:
       - .:/opt/app
     ports:
