--- a/sample.env
+++ b/sample.env
@@ -1,5 +1,6 @@
 export COVERAGE=1
 export RACK_ENV=development
+export OTEL_TRACES_EXPORTER=console
 
 # Update to match your local database configuration, if necessary.
 export DATABASE_USER=""
