Added linting for code documentation.

--- a/.github/config/rubocop_linter_action.yml
+++ b/.github/config/rubocop_linter_action.yml
@@ -17,6 +17,7 @@ versions:
   - rubocop-rake: 'latest'
   - rubocop-rspec: 'latest'
   - rubocop-sequel: 'latest'
+  - rubocop-yard: 'latest'
 
 # Description: RuboCop configuration file path relative to the workspace.
 # Valid options: A valid file path inside of the workspace.
