--- a/.github/config/rubocop_linter_action.yml
+++ b/.github/config/rubocop_linter_action.yml
@@ -14,6 +14,7 @@ check_name: 'RuboCop Results'
 versions:
   - rubocop: 'latest'
   - rubocop-factory_bot: 'latest'
+  - rubocop-md: 'latest'
   - rubocop-rake: 'latest'
   - rubocop-rspec: 'latest'
   - rubocop-sequel: 'latest'
