--- a/.github/workflows/branch.yaml
+++ b/.github/workflows/branch.yaml
@@ -13,9 +13,9 @@ jobs:
       - uses: actions/checkout@v4
       - run: git fetch origin main --depth=1
       - name: RuboCop Linter
-        uses: andrewmcodes/rubocop-linter-action@v3.3.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: reclaim-the-stack/rubocop-action@v1
+        with:
+          gem_versions: Gemfile
 
   spec:
     runs-on: ubuntu-latest
