--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 !sample.env
 coverage/
 log/
+out/
+site/
 
 # Ignore Byebug command history file.
 .byebug_history
@@ -21,4 +23,3 @@ log/
 .idea/dataSources.xml
 *.iml
 *.iws
-out/
