--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,7 @@ AllCops:
     - 'db/*schema.rb'
     - 'out/**/*'
     - 'vendor/**/*'
+    - 'doc/**/*'
 
 # Transient properties get mistaken for associations in FactoryBot.
 # See https://github.com/rubocop/rubocop-factory_bot/issues/73
