--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,6 +1,12 @@
 on:
   pull_request:
   workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Environment to deploy to'
+        default: 'dev'
+        required: true
+        type: environment
   push:
     branches:
       - main
@@ -8,7 +14,7 @@ on:
 jobs:
   deploy:
     name: Deploy Documentation
-    environment: ${{ env.ENVIRONMENT || 'dev' }}
+    environment: ${{ input.environment || 'dev' }}
     env:
       BUCKET_NAME: ${{ env.BUCKET_NAME || 'dev.docs.cfa.codes' }}
       PREFIX: ${{ env.PREFIX || 'document-transfer-service' }}
