Added document deploy.

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -28,7 +28,7 @@ jobs:
         with:
           python-version: 3.x
       - name: Install plantuml
-        uses: Timmy/plantuml-action@v1
+        run: sudo apt-get install -y plantuml
       - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
       - uses: actions/cache@v4
         with:
@@ -38,4 +38,4 @@ jobs:
             mkdocs-material-
       - run: pip install mkdocs-material pymdown-extensions plantuml_markdown
       - run: mkdocs build
-      - run: aws s3 sync ./site "s3://${{ env.BUCKET_NAME || 'dev.docs.cfa.codes' }}/${{ env.PREFIX || 'document-transfer-service' }}" --recursive
+      - run: aws s3 sync ./site "s3://${{ env.BUCKET_NAME || 'dev.docs.cfa.codes' }}/${{ env.PREFIX || 'document-transfer-service' }}"
