--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,12 +1,6 @@
 on:
+  # TODO: remove pull requests before merging.
   pull_request:
-  workflow_dispatch:
-    inputs:
-      environment:
-        description: 'Environment to deploy to'
-        default: 'dev'
-        required: true
-        type: environment
   push:
     branches:
       - main
